# khmer-text-normalizer

Text Normalization/: pyproject.toml
Text Normalization/khmer_tn/: normalizer.py  segment.py
Text Normalization/khmer_tn/categories/: __init__.py  date.py  decimal.py  measure.py  ordinal.py  pause.py  percent.py  repeat.py  time.py
Text Normalization/khmer_tn/src/khmer_tn/: __init__.py  clean.py  main.py  normalizer.py
Text Normalization/khmer_tn/src/khmer_tn/categories/: __init__.py  base.py  cardinal.py  duration.py  email.py  money.py  range.py  telephone.py  time.py
Text Normalization/khmer_tn/src/khmer_tn/utils/: letter_names.py  number_reader.py
Text Normalization/khmer_tn/utils/: digits.py
Text Normalization/tests/: test_pipeline.py
khmer_tn/: __init__.py  normalizer.py
khmer_tn/categories/: base.py  date.py  fraction.py  id.py  money.py  range.py  telephone.py  year.py
khmer_tn/utils/: __init__.py
