[project]
name = "khmer-tn"
version = "0.1.0"
description = "Text normalization tool for Khmer language"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["khmer_tn"]